fear : add certificate

--- a/certificate.html
+++ b/certificate.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
   <link rel="bookmark" href="./images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Career</title>
+  <title>Certificate</title>
 </head>
 
 <body>
@@ -25,13 +25,208 @@
       </div>
     </aside>
 
-    <main class="main"></main>
+    <main class="main">
+      <form id="theForm">
+        <fieldset>
+          <legend>搜尋</legend>
+          <div class="certificate_category">
+            <input type="checkbox" name="toggle" id="toggle">
+            <label for="toggle">全選</label>
+            <hr>
+            <div>
+              <input type="checkbox" id="Stock" name="Stock" value="Stock">
+              <label for="Stock">股票</label>
+              <input type="checkbox" id="Bond" name="Bond" value="Bond">
+              <label for="Bond">債券</label>
+
+              <input type="checkbox" id="Futures" name="Futures" value="Futures">
+              <label for="Futures">期貨</label>
+
+              <input type="checkbox" id="Securities" name="Securities" value="Securities">
+              <label for="Securities">證券</label>
+
+              <input type="checkbox" id="Investment" name="Investment" value="Investment">
+              <label for="Investment">投信</label>
+            </div>
+          </div>
+          <div>
+            <button id="submit" class="btn"><span>Search</span><img src="./images/icon_search.svg" alt="搜尋圖示"></button>
+          </div>
+        </fieldset>
+      </form>
+      <div class="certificate_table_div">
+        <form id="Certificate">
+          <table class="certificate_table">
+            <thead>
+              <tr>
+                <th class="certificate_tabletopic c1">
+                  <input type="checkbox" name="custom-checkbox" id="custom-checkbox">
+                  <label for="custom-checkbox" class="checkbox-label"></label>
+                </th>
+                <th class="certificate_tabletopic">證照分類<img src="./images/icon_filter.svg" alt="篩選圖示"></th>
+                <th class="certificate_tabletopic">證照名稱<img src="./images/icon_filter.svg" alt="篩選圖示"></th>
+                <th class="certificate_tabletopic">證照級別<img src="./images/icon_filter.svg" alt="篩選圖示"></th>
+                <th class="certificate_tabletopic">取得日期<img src="./images/icon_filter.svg" alt="篩選圖示"></th>
+                <th class="certificate_tabletopic">附件<img src="./images/icon_filter.svg" alt="篩選圖示"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <input type="checkbox" id="checkbox1" class="custom-checkbox">
+                  <label for="checkbox1" class="checkbox-label"></label>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>
+                  <input type="checkbox" id="checkbox2" class="custom-checkbox">
+                  <label for="checkbox2" class="checkbox-label"></label>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>
+                  <input type="checkbox" id="checkbox3" class="custom-checkbox">
+                  <label for="checkbox3" class="checkbox-label"></label>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>
+                  <input type="checkbox" id="checkbox4" class="custom-checkbox">
+                  <label for="checkbox4" class="checkbox-label"></label>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>
+                  <input type="checkbox" id="checkbox5" class="custom-checkbox">
+                  <label for="checkbox5" class="checkbox-label"></label>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>
+                  <input type="checkbox" id="checkbox6" class="custom-checkbox">
+                  <label for="checkbox6" class="checkbox-label"></label>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>
+                  <input type="checkbox" id="checkbox7" class="custom-checkbox">
+                  <label for="checkbox7" class="checkbox-label"></label>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>
+                  <input type="checkbox" id="checkbox8" class="custom-checkbox">
+                  <label for="checkbox8" class="checkbox-label"></label>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>
+                  <input type="checkbox" id="checkbox9" class="custom-checkbox">
+                  <label for="checkbox9" class="checkbox-label"></label>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>
+                  <input type="checkbox" id="checkbox10" class="custom-checkbox">
+                  <label for="checkbox10" class="checkbox-label"></label>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>
+                  <input type="checkbox" id="checkbox11" class="custom-checkbox">
+                  <label for="checkbox11" class="checkbox-label"></label>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>
+                  <input type="checkbox" id="checkbox12" class="custom-checkbox">
+                  <label for="checkbox12" class="checkbox-label"></label>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+        </form>
+        <div class="unified_pagination" actpage="1">
+          <a href="#!-1" class="unified_pagination_i">＜</a>
+          <a href="#!1" class="unified_pagination_i">1</a>
+          <a href="#!2" class="unified_pagination_i">2</a>
+          <a href="#!3" class="unified_pagination_i">3</a>
+          <a href="#!4" class="unified_pagination_i">4</a>
+          <a href="#!5" class="unified_pagination_i">5</a>
+          <a href="#!6" class="unified_pagination_i">6</a>
+          <a href="#!+1" class="unified_pagination_i">＞</a>
+        </div>
+      </div>
+    </main>
   </div>
 
   <footer class="frontfooter">
     <botton class="frontfooter_scrolltop" id="scrollTop"><img src="./images/icon_gotop.svg" alt="回到頂端按鈕"></botton>
   </footer>
 
+  <script src="./js/jquery-3.7.1.min.js"></script>
+  <script src="./js/toggle.js"> </script>
+  <script src="./js/pagination.js"> </script>
   <script src="./js/scrollTop.js"></script>
 
 </body>
