--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <td></td>
             </tr>
             <tr>
-              <td class="general_info_tabletopic">年資起始日</td>
+              <td class="general_info_tabletopic">累計年資</td>
               <td></td>
             </tr>
             <tr>
@@ -104,24 +104,22 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card card-1">
-              <h3>個人資料</h3>
+              <p>個人資料</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="card card-2">
-              <h3>學歷經歷</h3>
+              <p>學歷經歷</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="card card-3">
-              <h3>工作經歷
-              </h3>
+              <p>工作經歷</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="card card-4">
-              <h3>異動紀錄
-              </h3>
+              <p>異動紀錄</p>
             </div>
           </div>
         </div>
@@ -134,6 +132,7 @@
     <botton class="frontfooter_scrolltop" id="scrollTop"><img src="./images/icon_gotop.svg" alt="回到頂端按鈕"></botton>
   </footer>
 
+  <script src="./js/jquery-3.7.1.min.js"></script>
   <script src="./js/scrollTop.js"></script>
   <script src="./js/search_nameList.js"></script>
 
