feat: index cardborder change on click

--- a/certificate.html
+++ b/certificate.html
@@ -64,6 +64,7 @@
                   <label for="custom-checkbox" class="checkbox-label"></label>
                 </th>
                 <th class="certificate_tabletopic">證照分類<img src="./images/icon_filter.svg" alt="篩選圖示"></th>
+                <th class="certificate_tabletopic">員工姓名<img src="./images/icon_filter.svg" alt="篩選圖示"></th>
                 <th class="certificate_tabletopic">證照名稱<img src="./images/icon_filter.svg" alt="篩選圖示"></th>
                 <th class="certificate_tabletopic">證照級別<img src="./images/icon_filter.svg" alt="篩選圖示"></th>
                 <th class="certificate_tabletopic">取得日期<img src="./images/icon_filter.svg" alt="篩選圖示"></th>
@@ -81,12 +82,14 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td></td>
               </tr>
               <tr>
                 <td>
                   <input type="checkbox" id="checkbox2" class="custom-checkbox">
                   <label for="checkbox2" class="checkbox-label"></label>
                 </td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -103,12 +106,14 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td></td>
               </tr>
               <tr>
                 <td>
                   <input type="checkbox" id="checkbox4" class="custom-checkbox">
                   <label for="checkbox4" class="checkbox-label"></label>
                 </td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -125,12 +130,14 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td></td>
               </tr>
               <tr>
                 <td>
                   <input type="checkbox" id="checkbox6" class="custom-checkbox">
                   <label for="checkbox6" class="checkbox-label"></label>
                 </td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -147,12 +154,14 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td></td>
               </tr>
               <tr>
                 <td>
                   <input type="checkbox" id="checkbox8" class="custom-checkbox">
                   <label for="checkbox8" class="checkbox-label"></label>
                 </td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -169,12 +178,14 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td></td>
               </tr>
               <tr>
                 <td>
                   <input type="checkbox" id="checkbox10" class="custom-checkbox">
                   <label for="checkbox10" class="checkbox-label"></label>
                 </td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -191,12 +202,14 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td></td>
               </tr>
               <tr>
                 <td>
                   <input type="checkbox" id="checkbox12" class="custom-checkbox">
                   <label for="checkbox12" class="checkbox-label"></label>
                 </td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
